--- a/Homework1_ac4635.Rmd
+++ b/Homework1_ac4635.Rmd
@@ -55,24 +55,34 @@ data("penguins", package = "palmerpenguins")
 The Penguin dataset contains the following variables:
 `r ls(penguins)`
 
-The size of the Penguin dataset contains `r nrow(penguins)` rows or observations and `r ncol(penguins)` columns or 
-variables. 
+The size of the Penguin dataset contains `r nrow(penguins)` rows or observations and 
+`r ncol(penguins)` columns or variables. 
 
-Species is `r class (pull(penguins, species))` variable with 3 categories: `r levels(pull(penguins, species))`.
+Species is `r class (pull(penguins, species))` variable with 3 categories: 
+`r levels(pull(penguins, species))`.
 
-Island is `r class (pull(penguins, island))` variable with with 3 categories: `r levels(pull(penguins, island))`.
+Island is `r class (pull(penguins, island))` variable with with 3 categories:
+`r levels(pull(penguins, island))`.
 
-Bill length is a `r class (pull(penguins, bill_length_mm))` variable. The mean bill length is `r mean(pull(penguins, bill_length_mm), na.rm=TRUE)`mm and the median bill length is `r median(pull(penguins, bill_length_mm), na.rm=TRUE)`mm . The minimum bill length is `r min((pull(penguins, bill_length_mm)), na.rm = TRUE)`mm and the maximum bill length is `r min((pull(penguins, bill_length_mm)), na.rm = TRUE)`mm.
+Bill length is a `r class (pull(penguins, bill_length_mm))` variable. 
+The mean bill length is `r mean(pull(penguins, bill_length_mm), na.rm=TRUE)`mm and the median bill length is `r median(pull(penguins, bill_length_mm), na.rm=TRUE)`mm . 
+The minimum bill length is `r min((pull(penguins, bill_length_mm)), na.rm = TRUE)`mm and the maximum bill length is `r min((pull(penguins, bill_length_mm)), na.rm = TRUE)`mm.
 
-Bill depth is a `r class (pull(penguins, bill_depth_mm))` variable. The mean bill depth is `r mean(pull(penguins, bill_depth_mm), na.rm=TRUE)`mm and the median bill depth is `r median(pull(penguins, bill_depth_mm), na.rm=TRUE)`mm .The minimum bill depth is `r min((pull(penguins, bill_depth_mm)), na.rm = TRUE)`mm and the maximum bill depth is `r min((pull(penguins, bill_depth_mm)), na.rm = TRUE)`mm.
+Bill depth is a `r class (pull(penguins, bill_depth_mm))` variable. The mean bill depth is `r mean(pull(penguins, bill_depth_mm), na.rm=TRUE)`mm and the median bill depth is 
+`r median(pull(penguins, bill_depth_mm), na.rm=TRUE)`mm .The minimum bill depth is
+`r min((pull(penguins, bill_depth_mm)), na.rm = TRUE)`mm and the maximum bill depth is 
+`r min((pull(penguins, bill_depth_mm)), na.rm = TRUE)`mm.
 
 Flipper length is a `r class (pull(penguins, flipper_length_mm))` variable. The mean flipper length is `r mean(pull(penguins, flipper_length_mm), na.rm=TRUE)`mm and the median flipper length is `r median(pull(penguins, flipper_length_mm), na.rm=TRUE)`mm. The range for flipper length is between `r range (pull(penguins, flipper_length_mm), na.rm = TRUE)`mm.
 
-Body mass is a `r class (pull(penguins, body_mass_g))` variable with a mean of `r mean(pull(penguins, body_mass_g), na.rm=TRUE)` grams from the sample.
+Body mass is a `r class (pull(penguins, body_mass_g))` variable with a mean of 
+`r mean(pull(penguins, body_mass_g), na.rm=TRUE)` grams from the sample.
 
-Sex is `r class (pull(penguins, sex))` variable with these categories: `r levels(pull(penguins, sex))`.
+Sex is `r class (pull(penguins, sex))` variable with these categories: 
+`r levels(pull(penguins, sex))`.
 
-Year is `r class(pull(penguins, year))` variable with a range of `r range(pull(penguins, year))`.
+Year is `r class(pull(penguins, year))` variable with a range of 
+`r range(pull(penguins, year))`.
 
 
 This is the code Scatterplot of flipper_length_mm (y) vs bill_length_mm (x) below:
